alignment corrections

--- a/src/components/Home.css
+++ b/src/components/Home.css
@@ -7,13 +7,14 @@
 }
 
 .modal-home {
-    color: white;
-    margin-top: 30px !important;
-    width: 90% !important;
-    font-weight: bold !important;
-    font-size: 40px !important;
-    border: 2px solid white;
-    border-radius: 10px;
+    display: flex;
+        justify-content: center;
+        align-self: center;
+        color: white;
+        font-weight: bold !important;
+        font-size :40px !important;
+        border: 2px solid white;
+        border-radius: 10px;
 }
 @media(max-width:576px){
     .modal-home {
@@ -22,7 +23,7 @@
            align-self: center;
             color: white;
             font-weight: bold !important;
-            font: size 30px !important;
+            font-size : 30px !important;
             border: 2px solid white;
             border-radius: 10px;
         }
@@ -34,7 +35,7 @@
             align-self: center;
             color: white;
             font-weight: bold !important;
-            font: size 30px !important;
+            font-size : 35px !important;
             border: 2px solid white;
             border-radius: 10px;
         }
@@ -46,7 +47,7 @@
             align-self: center;
             color: white;
             font-weight: bold !important;
-            font: size 40px !important;
+            font-size: 35px !important;
             border: 2px solid white;
             border-radius: 10px;
         }
@@ -75,7 +76,7 @@
     .img1-home {
             display: flex;
             justify-content: center;
-            transform: scale(0.8);
+            transform: scale(0.7);
             animation: scaleFadeIn 1s ease-in-out, scrollAnimation 10s linear infinite;
         }
     
@@ -87,28 +88,9 @@
     
             100% {
                 opacity: 1;
-                transform: scale(1.1);
+                transform: scale(0.9);
             }
         }
-}
-
-
-
-@import 'https://fonts.googleapis.com/css?family=Roboto';
-
-
-.blink {
-    animation: blink 0.5s infinite;
-}
-
-@keyframes blink {
-    to {
-        opacity: 0;
-    }
-}
-
-.flex {
-    display: flex;
 }
 
 .header-sub-title {
@@ -158,43 +140,20 @@
  .self-des {
      display: flex;
      justify-content: center;
-     align-self: center  !important;
      font-size:larger;
      color: white;
-     white-space: normal;
-     overflow-wrap: break-word;
  }
-
- @media(max-width:576px){
+@media(max-width:576px){
     .self-des {
             display: flex;
             justify-content: center;
-            align-self: center !important;
             font-size: larger;
             color: white;
-            white-space: normal;
-            overflow-wrap: break-word;
+            border: 2px solid white;
+            border-radius: 10px;
         }
+}
+
+ .stack-btn{
+    margin: 10px!important;
  }
- @media(max-width:768px) {
-     .self-des {
-         display: flex;
-         justify-content: center;
-         align-self: center !important;
-         font-size: larger;
-         color: white;
-         white-space: normal;
-         overflow-wrap: break-word;
-     }
- }
-  @media(max-width:991px) {
-      .self-des {
-          display: flex;
-          justify-content: center;
-          align-self: center !important;
-          font-size: larger;
-          color: white;
-          white-space: normal;
-          overflow-wrap: break-word;
-      }
-  }
